ansible/roles/ocp-workload-parksmap-demo/files/workshop-nationalparks.yaml
---
kind: List
apiVersion: v1
metadata: {}
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: workshop
      component: nationalparks
      role: frontend
    name: nationalparks
  spec:
    lookupPolicy:
      local: false
    tags:
    - name: latest
      importPolicy: {}
      referencePolicy:
        type: ""
- kind: BuildConfig
  apiVersion: v1
  metadata:
    labels:
      app: workshop
      component: nationalparks
      role: frontend
    name: nationalparks
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: nationalparks:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: master
        uri: https://github.com/openshift-roadshow/nationalparks-py
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: python:3.5
          namespace: openshift
      type: Source
    triggers:
    - generic:
        secret: 3ce175ca0406c24d
      type: Generic
    - github:
        secret: "0739955342648413"
      type: GitHub
    - imageChange: {}
      type: ImageChange
    - type: ConfigChange
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: nationalparks
    labels:
      app: workshop
      component: nationalparks
      role: frontend
  spec:
    replicas: 1
    selector:
      deploymentconfig: nationalparks
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        post:
          execNewPod:
            command:
            - curl
            - -s
            - http://nationalparks:8080/ws/data/load
            containerName: nationalparks
          failurePolicy: Ignore
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: workshop
          component: nationalparks
          deploymentconfig: nationalparks
          role: frontend
      spec:
        containers:
        - env:
          - name: DB_USERNAME
            valueFrom:
              secretKeyRef:
                key: database-user
                name: mongodb-nationalparks
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: mongodb-nationalparks
          - name: DB_NAME
            valueFrom:
              secretKeyRef:
                key: database-name
                name: mongodb-nationalparks
          - name: DB_HOST
            value: mongodb-nationalparks
          image: nationalparks
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ws/healthz/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nationalparks
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ws/healthz/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - nationalparks
        from:
          kind: ImageStreamTag
          name: nationalparks:latest
      type: ImageChange
    - type: ConfigChange
- kind: Service
  apiVersion: v1
  metadata:
    name: nationalparks
    labels:
      app: workshop
      component: nationalparks
      role: frontend
      type: parksmap-backend
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: nationalparks
    sessionAffinity: None
    type: ClusterIP
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: mongodb-nationalparks
    labels:
      app: workshop
      component: nationalparks
      role: database
  spec:
    replicas: 1
    selector:
      deploymentconfig: mongodb-nationalparks
      app: workshop
      component: nationalparks
      role: database
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        labels:
          deploymentconfig: mongodb-nationalparks
          app: workshop
          component: nationalparks
          role: database
      spec:
        containers:
        - env:
          - name: MONGODB_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: mongodb-nationalparks
          - name: MONGODB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: mongodb-nationalparks
          - name: MONGODB_ADMIN_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-admin-password
                name: mongodb-nationalparks
          - name: MONGODB_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: mongodb-nationalparks
          image: mongodb
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 27017
            timeoutSeconds: 1
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
                --eval="quit()"
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongodb-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-nationalparks
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mongodb
        from:
          kind: ImageStreamTag
          name: mongodb:3.2
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: workshop
      component: nationalparks
      role: database
    name: mongodb-nationalparks
  spec:
    ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      deploymentconfig: mongodb-nationalparks
    sessionAffinity: None
    type: ClusterIP
- kind: Secret
  apiVersion: v1
  metadata:
    name: mongodb-nationalparks
    labels:
      app: workshop
      component: nationalparks
      role: database
  type: Opaque
  data:
    database-admin-password: bW9uZ29kYg==
    database-name: bW9uZ29kYg==
    database-password: bW9uZ29kYg==
    database-user: bW9uZ29kYg==
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: mongodb-nationalparks
    labels:
      app: workshop
      component: nationalparks
      role: database
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
