ansible/roles/ocp-workload-parksmap-demo/files/workshop-parksmap.yaml
---
kind: List
apiVersion: v1
metadata: {}
items:
- kind: RoleBinding
  apiVersion: v1
  groupNames: null
  metadata:
    name: view
  roleRef:
    name: view
  subjects:
  - kind: ServiceAccount
    name: default
- kind: ImageStream
  apiVersion: v1
  metadata:
    name: parksmap
    labels:
      app: workshop
      component: parksmap
      role: ui
  spec:
    lookupPolicy:
      local: false
    tags:
    - name: 1.2.0
      from:
        kind: DockerImage
        name: docker.io/openshiftroadshow/parksmap:1.2.0
      importPolicy: {}
      referencePolicy:
        type: Source
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: parksmap
    labels:
      app: workshop
      component: parksmap
      role: ui
  spec:
    replicas: 1
    selector:
      app: workshop
      component: parksmap
      role: ui
      deploymentconfig: parksmap
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: workshop
          component: parksmap
          role: ui
          deploymentconfig: parksmap
      spec:
        containers:
        - name: parksmap
          image: parksmap
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
       #  resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 256Mi
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - parksmap
        from:
          kind: ImageStreamTag
          name: parksmap:1.2.0
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    name: parksmap
    labels:
      app: workshop
      component: parksmap
      role: ui
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: parksmap
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    name: parksmap
    labels:
      app: workshop
      component: parksmap
      role: ui
  spec:
    host:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: parksmap
      weight: 100
    wildcardPolicy: None
